Prevent prev/next post buttons from having text too close to each other

--- a/sass/_post-nav.scss
+++ b/sass/_post-nav.scss
@@ -16,9 +16,12 @@
 
 		&.post-nav-prev {
 			transform-origin: left;
+			padding-right: 1rem;
 
 			:root[dir="rtl"] & {
 				transform-origin: right;
+				padding-right: unset;
+				padding-left: 1rem;
 			}
 
 			.nav-arrow::before {
@@ -33,12 +36,15 @@
 		&.post-nav-next {
 			transform-origin: right;
 			margin-left: auto;
+			padding-left: 1rem;
 			text-align: end;
 
 			:root[dir="rtl"] & {
 				transform-origin: left;
 				margin-right: auto;
 				margin-left: unset;
+				padding-right: 1rem;
+				padding-left: unset;
 			}
 
 			.nav-arrow::after {
